--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,5 +21,21 @@ services:
     volumes:
       - mydatabase:/var/lib/sql
 
+  nginx:
+    container_name: nginx
+    image: jonasal/nginx-certbot
+    restart: always
+    environment:
+      - CERTBOT_EMAIL=name@example.com 
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - nginx_secrets:/etc/letsencrypt
+      - ./user_conf.d:/etc/nginx/user_conf.d 
+    depends_on:
+      - myportfolio
+
   volumes:
     mydatabase: 
+    nginx_secrets:
