--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,7 @@ jobs:
           SSH_IP: ${{ secrets.SSH_IP }}
       
 
-      - name: Print project root directory
-        run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && pwd'
+#      - name: Print project root directory
+#        run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && pwd'
+      - name: Deploy Site
+        run: ssh my-vm '~/redeploy-site.sh'
